# c2000-inverter

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: CI-build.yml
cmake/: CodeCoverage.cmake  platform.cmake
common-build-options/: CMakeLists.txt
common-build-options/c2000/: 2837xD_RAM_lnk_cpu1.cmd  CMakeLists.txt  toolchain.cmake
common-build-options/host/: CMakeLists.txt  toolchain.cmake
common-build-options/stm32f1/: CMakeLists.txt  toolchain.cmake
docs/: Tesla-M3-JTAG-cable.md
include/: focpwmgeneration.h  hwinit.h  my_fp.h  my_math.h  param_prj.h  params.h  picontroller.h  pwmgeneration.h  pwmgenerationbase.h  resolverencoder.h  sine_core.h  sinepwmgeneration.h  stm32pwmdriver.h
include/hw/: tlf35584_safety_psu.h
libopeninv/: CMakeLists.txt
libopeninv/include/: crc8.h  errormessage.h  my_fp.h  my_math.h  params.h
libopeninv/src/: crc8.cpp  errormessage.cpp  my_fp.c  params.cpp  picontroller.cpp  printf.cpp  sine_core.cpp
newtest/: CMakeLists.txt  matcherhelper.h  mockanain.h  test_fp.cpp  test_throttle.cpp  testfocpwmgeneration.cpp
platform/: CMakeLists.txt
platform/c2000/: CMakeLists.txt
platform/c2000/blinky/: CMakeLists.txt  blinky.cpp
platform/c2000/device_support/: CMakeLists.txt
platform/c2000/device_support/include/: device.h  driverlib.h
platform/c2000/device_support/source/: F2837xD_CodeStartBranch.asm  device.c
platform/c2000/driverlib/: CMakeLists.txt  adc.c  adc.h  asysctl.c  asysctl.h  can.c  can.h  cla.c  cla.h  clb.c  clb.h  cmpss.c  cmpss.h  cpu.h  cputimer.c  cputimer.h  dac.c  dac.h  dcsm.c  dcsm.h  debug.h  dma.c  dma.h  ecap.c  ecap.h  emif.c  emif.h  epwm.c  epwm.h  eqep.c  eqep.h  flash.c  flash.h  gpio.c  gpio.h  hrpwm.c  hrpwm.h  i2c.c  i2c.h  interrupt.c  (+25 more)
platform/c2000/driverlib/inc/: hw_adc.h  hw_asysctl.h  hw_can.h  hw_cla.h  hw_clb.h  hw_clbxbar.h  hw_cmpss.h  hw_cputimer.h  hw_dac.h  hw_dcsm.h  hw_dma.h  hw_ecap.h  hw_emif.h  hw_epwm.h  hw_epwmxbar.h  hw_eqep.h  hw_flash.h  hw_gpio.h  hw_hrpwm.h  hw_i2c.h  hw_inputxbar.h  hw_ints.h  hw_ipc.h  hw_mcbsp.h  hw_memcfg.h  hw_memmap.h  hw_nmi.h  hw_outputxbar.h  hw_pie.h  hw_sci.h  hw_sdfm.h  hw_spi.h  hw_sysctl.h  hw_types.h  hw_upp.h  hw_usb.h  hw_xbar.h  hw_xint.h
platform/c2000/dumpeeprom/: CMakeLists.txt  dumpeeprom.cpp  eeprom.cpp  spihelper.h
platform/c2000/gatedrivertest/: CMakeLists.txt  gatedriver.cpp  gatedriver.h  gatedriverspi.cpp  gatedriverspi.h  gatedrivertest.cpp
platform/c2000/inverter/: CMakeLists.txt  c2000anain.cpp  c2000anain.h  c2000current.cpp  c2000current.h  c2000encoder.cpp  c2000encoder.h  c2000pwmdriver.cpp  c2000pwmdriver.h  c2000pwmgeneration.h  inverter_main.cpp
platform/c2000/inverter_drivers/: CMakeLists.txt  current.cpp  eeprom.cpp  encoder.cpp  gatedriver.cpp  gatedriver.h  gatedriverinterface.cpp  motoranalogcapture.cpp  pmicdriver.h  pmicspidriver.cpp  pwmdriver.cpp  scheduler.cpp
platform/c2000/inverter_drivers/c2000/: current.h  eeprom.h  gatedriver.h  gatedriverinterface.h  motoranalogcapture.h  performancecounter.h  pmicspidriver.h  pwmdriver.h  pwmgeneration.h  scheduler.h
platform/c2000/pmicdrivertest/: CMakeLists.txt  pmicdrivertest.cpp
platform/stm32f1/: CMakeLists.txt
platform/stm32f1/include/: stm32pwmdriver.h
platform/stm32f1/inverter/: CMakeLists.txt  stm32pwmdriver.cpp  vehiclecontrol.cpp
platform/stm32f1/libopeninv_stm32f1/: CMakeLists.txt
platform/stm32f1/libopeninv_stm32f1/src/: terminal.cpp
simulator/: CMakeLists.txt
simulator/pwm/: CMakeLists.txt  pwmsimulator.cpp  simulatorcurrent.cpp  simulatorcurrent.h  simulatorencoder.cpp  simulatorencoder.h  simulatorpwmdriver.cpp  simulatorpwmdriver.h  simulatorpwmgeneration.h
src/: CMakeLists.txt  foc.cpp  params.cpp  picontroller.cpp  printf.cpp  pwmgeneration-foc.cpp  pwmgeneration-sine.cpp  pwmgeneration.cpp  stm32_sine.cpp  stm32pwmdriver.cpp  terminal.cpp  terminal_prj.cpp  throttle.cpp  vehiclecontrol.cpp
test/: CMakeLists.txt  mockcurrent.h  mockencoder.cpp  mockencoder.h  mockpwmdriver.cpp  mockpwmdriver.h  mockresolversample.cpp  mockresolversample.h  test_fp.cpp  test_fu.cpp  test_throttle.cpp  testcrc8.cpp  testfoccalc.cpp  testfocpwmgeneration.cpp  testresolverencoder.cpp  testsinecore.cpp  utils.h
